Saving and loading task on start end of app.
Starting the app will load (if there are) tasks.

Stopping the app will save tasks to "Tasks.ser".